Its now possible to have virtual users ina a group, closes #21
