# server/specification/src/main/resources/openapi.yml
@@ -208,6 +208,28 @@ paths:
         '204':
           description: Resource not found.
 
+  /group/{groupId}/addVirtualUser:
+    post:
+      tags:
+        - "Group"
+      summary:  Creates a new group.
+      parameters:
+        - in: path
+          name: groupId
+          required: true
+          schema:
+            type: integer
+          description: The id of the group.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/addVirtualUserData'
+      responses:
+        '200':    # status code
+          description: Successfully added the user.
+
   /user:
     get:
       tags:
@@ -223,7 +245,7 @@ paths:
     put:
       tags:
         - "User"
-      summary:  Modifies current user information.
+      summary:  Modifies the user information of this user if permitted.
       requestBody:
         required: true
         content:
@@ -777,6 +799,16 @@ components:
           nullable: false
           description: The amount of money spent.
 
+    addVirtualUserData:
+      description: Data for the add virtual user call.
+      type: object
+      properties:
+        name:
+          type: string
+          example: Anton
+          nullable: false
+          description: The name of the virtual user.
+
     loginData:
       description: All information needed for the login.
       type: object
@@ -821,6 +853,10 @@ components:
           type: string
           example: Max Mustermann
           description: Name of the user
+        isVirtual:
+          type: boolean
+          example: false
+          description: Defines if this user is virtual or not.
         image:
           $ref: '#/components/schemas/imageData'
 
